--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,87 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+h1,
+p,
+div,
+span {
+  font-family: "Roboto Condensed", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  text-decoration: none;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+/* roboto-condensed-300 - latin */
+@font-face {
+  font-family: "Roboto Condensed";
+  font-style: normal;
+  font-weight: 300;
+  src: url("./Assets/fonts/roboto-condensed-v25-latin-300.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("./Assets/fonts/roboto-condensed-v25-latin-300.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("./Assets/fonts/roboto-condensed-v25-latin-300.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("./Assets/fonts/roboto-condensed-v25-latin-300.woff") format("woff"),
+    /* Modern Browsers */
+      url("./Assets/fonts/roboto-condensed-v25-latin-300.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("./Assets/fonts/roboto-condensed-v25-latin-300.svg#RobotoCondensed")
+      format("svg"); /* Legacy iOS */
+}
+/* roboto-condensed-regular - latin */
+@font-face {
+  font-family: "Roboto Condensed";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./Assets/fonts/roboto-condensed-v25-latin-regular.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("./Assets/fonts/roboto-condensed-v25-latin-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("./Assets/fonts/roboto-condensed-v25-latin-regular.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("./Assets/fonts/roboto-condensed-v25-latin-regular.woff")
+      format("woff"),
+    /* Modern Browsers */
+      url("./Assets/fonts/roboto-condensed-v25-latin-regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("./Assets/fonts/roboto-condensed-v25-latin-regular.svg#RobotoCondensed")
+      format("svg"); /* Legacy iOS */
+}
+/* roboto-condensed-700 - latin */
+@font-face {
+  font-family: "Roboto Condensed";
+  font-style: normal;
+  font-weight: 700;
+  src: url("./Assets/fonts/roboto-condensed-v25-latin-700.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("./Assets/fonts/roboto-condensed-v25-latin-700.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("./Assets/fonts/roboto-condensed-v25-latin-700.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("./Assets/fonts/roboto-condensed-v25-latin-700.woff") format("woff"),
+    /* Modern Browsers */
+      url("./Assets/fonts/roboto-condensed-v25-latin-700.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("./Assets/fonts/roboto-condensed-v25-latin-700.svg#RobotoCondensed")
+      format("svg"); /* Legacy iOS */
 }
